css/base2.css
/* ... */
.sticky-top p {
	color: #CCCCCC;
}

.sticky-top.is-hidden {
	visibility: initial;
	top: -36px;
}

/*---------------------------------------------------------------------------------------- TOP PORGRESS BAR */

.top-progress-bar-wrapper {
	position: fixed;
	top: 0;
	z-index: 11;
	width: 100%;
	height: 4px;
}

.top-progress-bar-wrapper div {
	height: 100%;
	width: 0%;
	background-color: #1971C2;
	transition: width 1s linear;
}

/*---------------------------------------------------------------------------------------- DARK MODE TOGGLE */
/* https://codepen.io/tatimblin/pen/RMjaqb */

.darkmode-toggle {
	width: 18px;
	height: 18px;
	overflow: hidden;
	cursor: pointer;
}

.darkmode-toggle .icon-wrapper svg { width: 18px; height: 18px; }

.darkmode-toggle .icon-wrapper.sun svg path { stroke: #C29C12; fill: #C29C12; }

.darkmode-toggle .icon-wrapper.moon svg path { stroke: #283445; fill: #283445; }

.darkmode-toggle .icon-wrapper { transition: all 200ms 300ms ease; }

.darkmode-toggle .icon-wrapper:last-child { transform: translatey(-18px); }

.darkmode-toggle .active { transition-delay: 100ms; }

.darkmode-toggle .active:first-child { transform: translatey(18px); }

.darkmode-toggle .active:last-child { transform: translatey(0); }

.darkmode-toggle .active.no-animation,
.darkmode-toggle .icon-wrapper.no-animation {
	/*transition: none;*/
	transition-delay: 0;
}

/*---------------------------------------------------------------------------------------- MODAL */

/* main containers */

.modal-wrapper {
	position: fixed;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
}

.dismiss-area {
	width: 100%;
	height: 100%;
	background-color: rgb(0,0,0);
  	background-color: rgba(0,0,0,0.5);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.modal {  }

.share-playlist-modal {
	border-radius: 3px;
	background-color: #fff;
	display: flex;
	flex-flow: column wrap;
	align-items: center;
}

/* playlist elements */

.modal-playlist-wrapper {
	display: flex;
	flex-flow: row;
	align-items: center;
	width: 100%;
	padding: 20px;
	border-bottom: solid 1px #dee2e6;
}

.modal-playlist-image {
	width: 78px;
	height: 78px;
	margin-right: 10px;
}

.modal-playlist-name { font-weight: 600; color: #343A40; }
.modal-playlist-description { font-size: .875rem; color: #808080; margin-top: 4px; font-weight: 200; }
.dark .modal-playlist-name { color: #343A40;  }
.dark .modal-playlist-description { color: #808080; }

.modal .description { color: #343A40; padding: 0 20px; text-align: center; font-weight: 200; }
.dark .modal .description { color: #343A40; }

/* buttons */

.btn-text {
	cursor: pointer;
	font-weight: 400;
	font-size: .875rem;
	color: var(--accent);
}

.btn-curved {
	cursor: pointer;
	padding: 8px 30px;
	border-radius: 27px;
	font-weight: 400;
	font-size: .875rem;
	color: #fff;
	background-color: var(--accent);
}

.dark .btn-text { color: var(--accent); }
.dark .btn-curved { color: #fff; }

/* spacing */

.share-playlist-modal > p:nth-of-type(1) { margin-bottom: 30px; margin-top: 16px; }
.share-playlist-modal > p:nth-of-type(2) { margin-bottom: 12px; }
.share-playlist-modal > p:nth-of-type(3) { margin-bottom: 20px; }

/* dismiss text */

.dismiss-text {
	cursor: default;
	margin-top: 16px;
	text-transform: uppercase;
	font-size: .625rem;
	font-weight: 500;
	color: #fff;
}

.dark .dismiss-text { color: #fff; }

/*---------------------------------------------------------------------------------------- MODAL ANIMATIONS */

/* set */
.modal-wrapper { visibility: hidden; opacity: 0; }
.modal { transform: translateY(30%); }

/* show */
.modal-wrapper.show { visibility: visible; opacity: 1; transition: visibility 0s linear 0s, opacity 300ms; } /*fade in*/
.modal-wrapper.show .modal { animation: slideUp .5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; } /*slide up*/
/* hide */
.modal-wrapper.hide { visibility: hidden; opacity: 0; transition: visibility 0s linear 300ms, opacity 300ms; } /*fade out*/
.modal-wrapper.hide .modal { animation: slideDown .5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; } /*slide down*/

/* keyframes */
@keyframes slideUp {
	0% { transform: translateY(30%); }
	100% { transform: translateY(0%); }
}

@keyframes slideDown {
	0% { transform: translateY(0%); }
	100% { transform: translateY(30%); }
}


/*---------------------------------------------------------------------------------------- IMAGE GRID */

.item-list {
	display: flex;
	flex-flow: row wrap;
	margin-top: 20px;
}

/* ITEM */

.item {
	vertical-align: top;
	text-align: left;
}

/* IMAGE */

.item .image-wrapper {
	width: 78px;
	height: 78px;
	background: #C4C4C4;
	border-radius: 4px;
}

.item img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 4px;
}

/* TEXT */

.item p,
.item svg {
	display: inline-block;
	vertical-align: middle;
}

.item p {
	font-size: .875rem;
	line-height: 1rem;
	letter-spacing: -.016em;
	font-weight: 400;
	padding-right: 4px;
}

.item svg  {
	fill: #999999;
	margin-right: 4px;
	margin-top: -2.5px;
}

.item.is-public svg { display: none; }

/* LIST TYPES */

/*---------------------------------------------------------------- large */

.item-list.large {
	gap: 20px;
}

.item-list.large .item { 
	flex: 1;
	width: 100%;
	min-width: 140px;
}

.item-list.large .item .image-wrapper { 
	width: 100%;
	padding-top: 100%;
	margin-bottom: 8px;
	position: relative;
}

.item-list.large .item img { 
	position: absolute;
	top: 0; left: 0; bottom: 0; right: 0;
}

.item-list.large .item p {  }

.item-list.large .item.is-filler { height: 0; }
.item-list.large .item.is-filler .image-wrapper { height: 0; padding: 0; }


/*---------------------------------------------------------------- medium */

.item-list.medium {
	gap: 10px;
}

.item-list.medium .item {
  flex: 1;
  display: flex;
  flex-flow: row;
  align-items: center;
  position: relative;

  min-width: 250px;
  max-height: 78px;
  background-color: #F1F1F1;
  border-radius: 4px;
}
/* ... */

